k8s/minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: devops-pets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          ports:
            - containerPort: 9000
            - containerPort: 9001
          command:
            - /bin/bash
            - -c
            - |
              mkdir -p /data/pets-images
              minio server /data --console-address ":9001"
          volumeMounts:
            - name: minio-storage
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
